@@ -1,8 +1,10 @@
 SUBDIRS=scalable
-THEME_IN_FILES=
- 
+THEME_IN_FILES=index.theme.in
+
+%.theme:   %.theme.in $(INTLTOOL_MERGE) $(wildcard $(top_srcdir)/po/*.po) ; $(INTLTOOL_MERGE) $(top_srcdir)/po $< $@ -d -u -c $(top_builddir)/po/.intltool-merge-cache
+
 icondir = $(datadir)/icons/BlueSphere
 
-icon_DATA = 
+icon_DATA = index.theme
  
-EXTRA_DIST=
+EXTRA_DIST=index.theme.in index.theme
