@@ -75,7 +75,7 @@ Lush/icons/scalable/filesystems/Makefile
 Lush/icons/scalable/mimetypes/Makefile
 Galaxy/Makefile
 Galaxy/gtk-2.0/Makefile
-Galaxy/metacity/Makefile
+Galaxy/metacity-1/Makefile
 BlueSphere/Makefile
 BlueSphere/gtk-2.0/Makefile
 BlueSphere/metacity-1/Makefile
