@@ -1,3 +1,12 @@
+2003-04-17  Alex Duggan  <aldug@astrolinux.com>
+
+	* configure.in:
+	* Galaxy/Makefile.am:
+	move metacity theme from metacity to metacity-1
+	
+	* BlueSphere/icons/Makefile.am:
+	translate index.theme.in
+	
 2003-04-04  Yanko Kaneti <yaneti@declera.com>
 
 	* configure.in:
